--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -10,9 +10,9 @@
     <header>
       <nav>
         <ul>
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Vehículos</a></li>
-          <li><a href="#">Financiación</a></li>
+          <li><a href="/index.html">Inicio</a></li>
+          <li><a href="/pages/vehiculos.html">Vehículos</a></li>
+          <li><a href="/pages/financiacion.html">Financiación</a></li>
           <li><a href="#" class="activo">Sobre Nosotros</a></li>
         </ul>
       </nav>
